Bugfix: Fixed tagging and revamped tagging feature